--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
         </a>
       </div>
         <div class="hotDeal-text">
-          <di class="hotDeal-tag">Hot deal</di>
-          <h2 class="hotDeal-name">Fishnet Chair</h2>
+          <div class="hotDeal-tag">Hot deal</div>
+          <h2 class="hotDeal-name">Fishnet&nbsp;&nbsp;Chair</h2>
           <p class="hotDeal-details">
             Seat and back with upholstery made of cold cure foam. Steel frame,
             available in matt powder-coated black
