--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <a href="index.html" class="menu-link-active menu-link">HOME </a>
             </li>
             <li class="menu-list">
-              <a href="#" class="menu-link">PRODUCTS</a>
+              <a href="product.html" class="menu-link">PRODUCTS</a>
             </li>
             <li class="menu-list">
               <a href="#" class="menu-link">HISTORY </a>
@@ -99,7 +99,7 @@
               <a href="#" class="menu-link">SHOWROOM</a>
             </li>
             <li class="menu-list">
-              <a href="#" class="menu-link">CONTACT </a>
+              <a href="contacts.html" class="menu-link">CONTACT </a>
             </li>
             <li class="menu-list">
               <a href="#"><img src="img/header/search.svg" alt="search" /></a>
@@ -113,20 +113,19 @@
             Seat and back with upholstery made of cold cure foam. Steel frame,
             available in matt powder-coated black
           </p>
-          <a href="#" class="button"
+          <a href="details.html" class="button"
             >Order Us <img src="img/arrow.svg" alt=""
           /></a>
         </div>
       </div>
-
       <div class="featured padding-site clear-fix">
         <div class="featured-title">
           <div class="featured-control">
             <div class="featured-control-active">Featured &nbsp</div>
             New &nbsp
           </div>
-          <a href="#" class="btn-ghost"
-            >explore all <img src="img/arrow.svg" alt=""
+          <a href="product.html" class="btn-ghost"
+            >explore all <img src="img/arrow.svg" alt="go"
           /></a>
         </div>
         <div class="featured-content-main">
@@ -135,7 +134,7 @@
                   <li class="featured-content-active">
                       <a href="#">
                     <div class="featured-content-active-block">
-                      <a href="#" class="button icon-hover"
+                      <a href="details.html" class="button icon-hover"
                         ><img src="img/arrow.svg" alt=""
                       /></a>
                       <h4 class="featured-content-active-h4">Fishnet Chair</h4>
@@ -147,7 +146,7 @@
                   <li class="featured-content-active">
                       <a href="#">
                     <div class="featured-content-active-block">
-                      <a href="#" class="button icon-hover"
+                      <a href="details.html" class="button icon-hover"
                         ><img src="img/arrow.svg" alt=""
                       /></a>
                       <h4 class="featured-content-active-h4">Fishnet Chair</h4>
@@ -160,7 +159,7 @@
                   <li class="featured-content-active">
                       <a href="#">
                     <div class="featured-content-active-block">
-                      <a href="#" class="button icon-hover"
+                      <a href="details.html" class="button icon-hover"
                         ><img src="img/arrow.svg" alt=""
                       /></a>
                       <h4 class="featured-content-active-h4">Fishnet Chair</h4>
@@ -173,7 +172,7 @@
                   <li class="featured-content-active">
                       <a href="#">
                     <div class="featured-content-active-block">
-                      <a href="#" class="button icon-hover"
+                      <a href="details.html" class="button icon-hover"
                         ><img src="img/arrow.svg" alt=""
                       /></a>
                       <h4 class="featured-content-active-h4">Fishnet Chair</h4>
@@ -212,7 +211,6 @@
 
         </div>
       </div>
-
       <div class="promo clear-fix">
         <div class="promo-pict1">
           <div class="promo-text">
@@ -222,7 +220,7 @@
               Seat and back with upholstery made of cold cure foam. Steel frame,
               available in matt powder-coated black or highly polished chrome.
             </p>
-            <a href="#" class="button"
+            <a href="details.html" class="button"
               >Order Us <img src="img/arrow.svg" alt="right arrow"
             /></a>
           </div>
@@ -235,56 +233,54 @@
               Seat and back with upholstery made of cold cure foam. Steel frame,
               available in matt powder-coated black or highly polished chrome.
             </p>
-            <a href="#" class="button"
+            <a href="details.html" class="button"
               >Order Us <img src="img/arrow.svg" alt="right arrow"
             /></a>
           </div>
         </div>
       </div>
-
       <div class="trending padding-site">
         <div class="trending-title">
           <div class="trending-control">
             Trending Products
           </div>
-          <a href="#" class="btn-ghost"
+          <a href="product.html" class="btn-ghost"
             >explore all <img src="img/arrow.svg" alt=""
           /></a>
         </div>
         <div class="trending-albom">
           <div class="trending-image">
-            <a href="#"
+            <a href="details.html"
               ><img src="img/trending_product/product-11.jpg" alt="product-11"
             /></a>
           </div>
           <div class="trending-image">
-            <a href="#"
+            <a href="details.html"
               ><img src="img/trending_product/product-21.jpg" alt="product-21"
             /></a>
           </div>
           <div class="trending-image">
-            <a href="#"
+            <a href="details.html"
               ><img src="img/trending_product/product-31.jpg" alt="product-31"
             /></a>
           </div>
           <div class="trending-image">
-            <a href="#"
+            <a href="details.html"
               ><img src="img/trending_product/product-41.jpg" alt="product-41"
             /></a>
           </div>
           <div class="trending-image">
-            <a href="#"
+            <a href="details.html"
               ><img src="img/trending_product/product-5.jpg" alt="product-5"
             /></a>
           </div>
           <div class="trending-image">
-            <a href="#"
+            <a href="details.html"
               ><img src="img/trending_product/product-6.jpg" alt="product-6"
             /></a>
           </div>
         </div>
       </div>
-
       <div class="hotDeal padding-site">
         <div
         id="carouselExampleIndicators"
@@ -349,12 +345,11 @@
             Seat and back with upholstery made of cold cure foam. Steel frame,
             available in matt powder-coated black
           </p>
-          <a href="#" class="button"
+          <a href="details.html" class="button"
             >Order Us <img src="img/arrow.svg" alt=""
           /></a>
         </div>
       </div>
-      
       <div class="exclusive padding-site">
         <div class="exclusive-main">
           <div class="exclusive-text">
@@ -364,35 +359,35 @@
               Seat and back with upholstery made of cold cure foam. Steel frame,
               available in matt powder-coated black or highly polished chrome.
             </p>
-            <a href="#" class="button"
+            <a href="details.html" class="button"
               >Order Us <img src="img/arrow.svg" alt="right arrow"
             /></a>
           </div>
         </div>
         <div class="exclusive-albom">
           <div class="exclusive-image">
-            <a href="#"
+            <a href="details.html"
               ><img
                 src="img/exclusive_product/product-2-sm.jpg"
                 alt="product-2"
             /></a>
           </div>
           <div class="exclusive-image">
-            <a href="#"
+            <a href="details.html"
               ><img
                 src="img/exclusive_product/product-3-sm.jpg"
                 alt="product-2"
             /></a>
           </div>
           <div class="exclusive-image">
-            <a href="#"
+            <a href="details.html"
               ><img
                 src="img/exclusive_product/product-4-sm.jpg"
                 alt="product-2"
             /></a>
           </div>
           <div class="exclusive-image">
-            <a href="#"
+            <a href="details.html"
               ><img
                 src="img/exclusive_product/product-5-sm.jpg"
                 alt="product-2"
@@ -410,8 +405,8 @@
             Save your favorites and share your style.
           </p>
           <div class="mobile-store">
-            <a href="#"><img src="img/mobile_app/app-store.png" alt="app" /></a>
-            <a href="#"
+            <a href="https://www.apple.com/ios/app-store/"><img src="img/mobile_app/app-store.png" alt="appstore" /></a>
+            <a href="https://play.google.com/store?hl=ru"
               ><img src="img/mobile_app/google-play.png" alt="google-play"
             /></a>
           </div>
@@ -461,7 +456,7 @@
                 style="padding-left: 15px;"
               />
               <a class="pict" href="#"
-                ><img src="img/footer/logo.png" alt=""
+                ><img src="img/footer/logo.png" alt="social"
               /></a>
             </div>
           </div>
@@ -471,7 +466,7 @@
             &copy;&nbsp;Copyright&nbsp;- INTERIOR 2016. All Rights Reserved.
           </div>
           <div class="footer-social">
-            <a href="#"
+            <a href="https://yandex.by/search/?text=социальные+сети&lr=157&clid=2091867&win=358"
               ><img src="img/footer/social-links.png" alt="social-links"
             /></a>
           </div>
