--- a/product.html
+++ b/product.html
@@ -21,7 +21,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700&display=swap");
     </style>
-    <title>Products</title>
+    <title>Interior Products</title>
   </head>
 
   <body>
