--- a/product.html
+++ b/product.html
@@ -31,10 +31,10 @@
           <a href="#"><img src="img/header/logo.svg" alt="Logo" /></a>
           <ul class="menu clear-fix">
             <li class="menu-list">
-              <a href="#" class="menu-link">HOME </a>
+              <a href="index.html" class="menu-link">HOME </a>
             </li>
             <li class="menu-list">
-              <a href="#" class="menu-link menu-link-active">PRODUCTS</a>
+              <a href="product.html" class="menu-link menu-link-active">PRODUCTS</a>
             </li>
             <li class="menu-list">
               <a href="#" class="menu-link">HISTORY </a>
@@ -43,7 +43,7 @@
               <a href="#" class="menu-link">SHOWROOM</a>
             </li>
             <li class="menu-list">
-              <a href="#" class="menu-link">CONTACT </a>
+              <a href="contacts.html" class="menu-link">CONTACT </a>
             </li>
             <li class="menu-list">
               <a href="#"><img src="img/header/search.svg" alt="search" /></a>
