--- a/contacts.html
+++ b/contacts.html
@@ -30,10 +30,10 @@
           <a href="#"><img src="img/header/logo.svg" alt="Logo" /></a>
           <ul class="menu clear-fix">
             <li class="menu-list">
-              <a href="#" class="menu-link menu-link-active">HOME </a>
+              <a href="index.html" class="menu-link">HOME </a>
             </li>
             <li class="menu-list">
-              <a href="#" class="menu-link">PRODUCTS</a>
+              <a href="product.html" class="menu-link">PRODUCTS</a>
             </li>
             <li class="menu-list">
               <a href="#" class="menu-link">HISTORY </a>
@@ -42,7 +42,7 @@
               <a href="#" class="menu-link">SHOWROOM</a>
             </li>
             <li class="menu-list">
-              <a href="#" class="menu-link">CONTACT </a>
+              <a href="contacts.html" class="menu-link menu-link-active">CONTACT </a>
             </li>
             <li class="menu-list">
               <a href="#"><img src="img/header/search.svg" alt="search" /></a>
