--- a/details.html
+++ b/details.html
@@ -30,7 +30,7 @@
           <a href="#"><img src="img/header/logo.svg" alt="Logo" /></a>
           <ul class="menu clear-fix">
             <li class="menu-list">
-              <a href="index.html" class="menu-link menu-link-active">HOME </a>
+              <a href="index.html" class="menu-link">HOME </a>
             </li>
             <li class="menu-list">
               <a href="product.html" class="menu-link">PRODUCTS</a>
